Implementing Envoy API Gateway In Kubernetes/demo-service-echoserver-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-backend-echoserver-v2
spec:
  selector:
    app: web-server-echoserver-v2
  ports:
    - port: 80
      targetPort: 80
