Implementing Envoy API Gateway In Kubernetes/demo-service-echoserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-backend-echoserver
spec:
  selector:
    app: web-server-echoserver
  ports:
    - port: 80
      targetPort: 80
