Implementing Envoy API Gateway In Kubernetes/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-backend
spec:
  selector:
    app: web-server
  ports:
    - port: 80
      targetPort: 80
