Implementing Envoy API Gateway In Kubernetes/demo-http-route-echoservice.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-backend-echoserver
spec:
  parentRefs:
    - name: envoy-gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /one
      backendRefs:
        - name: web-backend-echoserver
          port: 80
          weight: 2
        - name: web-backend-echoserver-v2
          port: 80
          weight: 1
    - matches:
      - path:
          type: PathPrefix
          value: /two
      backendRefs:
        - name: web-backend-echoserver
          port: 80
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /full-path-replace/new-path
